tests/reject/bad_c1.ml
void main () {
        int x;
        x = 122 " ";
}
